# sarosa-net

./: .gitmodules  Cargo.toml  build.rs
schemas/: authentication.capnp  commands.capnp  common.capnp  notifications.capnp
src/: lib.rs
src/messages/: deserialize.rs  mod.rs  serialize.rs  util.rs
src/net/: mod.rs
