[package]
name = "sarosa-net"
version = "0.1.0"
authors = ["Vaelden <maugan.villatel@gmail.com>"]

[dependencies]
byteorder = "*"
log = "*"

[dependencies.lycan-serialize]
git = "https://github.com/GreenPix/lycan-serialize.git"
rev = "04732272"

[features]
json = ["lycan-serialize/json"]

default = ["json"]
