[package]
name = "sarosa-net"
version = "0.1.0"
authors = ["Vaelden <maugan.villatel@gmail.com>"]

[dependencies]
byteorder = "*"
log = "*"

[dependencies.lycan-serialize]
git = "https://github.com/GreenPix/lycan-serialize.git"
rev = "05dbb23cb9f3724ab5cd6d936c8c1f791daa1fb6"

[features]
json = ["lycan-serialize/json"]

default = ["json"]
